# Airbnb_Price_Optimization

./: .gitignore  README.md  airbnb_listings_fetch.py  airbnb_location_test.ipynb  check_all_field_lengths.py  check_long_amenities.py  competitor_analysis_query.ipynb  create_airbnb_database_dimensional.ipynb  create_airbnb_database_normalized.ipynb  dashboard_db_utils.py  dashboard_executive_overview.py  dashboard_visualizations.py  database_modelling_schema.sql  database_normalized_schema.sql  etl_airbnb_normalized_postgres.py  etl_normalized_to_dimensional.py  explore_dimensional_database.ipynb  export_database.py  pyproject.toml  requirements.txt  sample_queries.py
.github/instructions/: general-rule.instructions.md
.streamlit/: config.toml
Documentation/: DASHBOARD_QUICKSTART.md  NORMALIZATION_SUMMARY.md  README_DASHBOARD.md  README_DATABASE.md  README_DIMENSIONAL_MODEL.md  README_ETL_GUIDE.md  README_ETL_PROCESS.md
Resources/: airbnb_beltline_calgary_listings.xlsx  airbnb_beltline_calgary_listings_100.json  airbnb_beltline_calgary_listings_100.xlsx  airbnb_beltline_calgary_listings_25.json  airbnb_listing_1300059188064308611.json  airbnb_listing_1300059188064308611.xlsx  airbnb_listing_calgary_997.xlsx  airbnb_listing_calgary_beltline_298.xlsx  sd_mhscq4j82hwgc7ayqf.json
database_export/: export_database.py
